--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-medium">December 2018</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/new-course">New course wizard</a>
+      </h3>
+      <p>
+        Create a new course in Publish rather than UCAS.
+      </p>
+
       <h2 class="heading-medium">November 2018</h2>
 
       <h3 class="heading-small">
