--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -12,12 +12,14 @@
   <{{headingLevel}} class="{{headingClass}}" id="{{ id }}">{{ title }}</{{headingLevel}}>
   <div class="grid-row">
     <div class="column-two-thirds design-history-screenshot">
-      <a href="{{ full }}">
-        <img src="{{ thumbnail }}" width="630" alt="Screenshot of {{ title }}" />
-      </a>
-    </div>
-    <div class="column-one-third design-history-text">
-      {{ text | safe }}
+      <div class="add-double-bottom-margin">
+        <a href="{{ full }}">
+          <img src="{{ thumbnail }}" width="630" alt="Screenshot of {{ title }}" />
+        </a>
+      </div>
+      <div class="design-history-text">
+        {{ text | safe }}
+      </div>
     </div>
   </div>
 </div>
