Split primary with history or geography

--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -17,7 +17,8 @@
         {% set primaryFields = [
            { name: 'Primary'},
            { name: 'Primary with English'},
-           { name: 'Primary with history or geography'},
+           { name: 'Primary with history'},
+           { name: 'Primary with geography'},
            { name: 'Primary with mathematics'},
            { name: 'Primary with modern languages'},
            { name: 'Primary with physical education'},
