Simplify organisation page, link to course creation

--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -1,4 +1,4 @@
-{% set title = 'What type of course is this?' %}
+{% set title = 'What type of new course?' %}
 {% extends "layout.html" %}
 {% block page_title %}{{ title }}{% endblock %}
 
