Add missing sections

--- a/app/views/history/new-course/index.html
+++ b/app/views/history/new-course/index.html
@@ -43,6 +43,14 @@
         <li>Primary with mathematics (Special educational needs)</li>
         <li>Biology (Special educational needs)</li>
       </ul>
+
+      <h2 class="heading-large">Missing from this design</h2>
+
+      <ul class="list list-bullet">
+        <li>Training location assignment</li>
+        <li>Course start month</li>
+        <li>Applications open date</li>
+      </ul>
     </div>
   </div>
 
@@ -80,7 +88,7 @@
       <li>Further education, they go on a different journey (not yet designed), they won’t see this page</li>
     </ul>
 
-    <p>If a user chooses Secondary and then Modern languages, we need to know which languages the courses is in.</p>
+    <p>If a user chooses Secondary and then Modern languages, we need to know which languages the course is in.</p>
   ') }}
 
   {{ macros.screenshot('Pick languages', 'pick-languages', '/public/images/history/new-course/thumbnails/03-pick-languages.png', '/public/images/history/new-course/03-pick-languages.png', '
