Split out fees and salary question

--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -48,19 +48,6 @@
           </div>
           <div>
             <dt class="cya-question">
-              Fee or salary
-            </dt>
-            <dd class="cya-answer">
-              {{ data['new-type'] }}
-            </dd>
-            <dd class="cya-change">
-              <a href="/new/phase">
-                Change<span class="visually-hidden"> fee or salary</span>
-              </a>
-            </dd>
-          </div>
-          <div>
-            <dt class="cya-question">
               Subject
             </dt>
             <dd class="cya-answer">
@@ -100,6 +87,19 @@
             <dd class="cya-change">
               <a href="/new/outcome">
                 Change<span class="visually-hidden"> outcome</span>
+              </a>
+            </dd>
+          </div>
+          <div>
+            <dt class="cya-question">
+              Fee or salary
+            </dt>
+            <dd class="cya-answer">
+              {{ data['new-type'] }}
+            </dd>
+            <dd class="cya-change">
+              <a href="/new/funding">
+                Change<span class="visually-hidden"> fee or salary</span>
               </a>
             </dd>
           </div>
