--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -122,7 +122,7 @@
       </table>
 
       <p class="add-top-margin">
-        <a href="/new/phase" class="button">Add course</a>
+        <a href="/new/phase" class="button">Add a new course</a>
       </p>
     </div>
   {% endfor %}
