--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -14,7 +14,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>What will a trainee get when they complete this course?</p>
-      <form action="/new/full-time-part-time" method="post">
+      <form action="/new/funding" method="post">
 
         {% set fields = [
             {
