--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -14,7 +14,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>What will a trainee get when they complete this course?</p>
-      <form action="/new/funding" method="post">
+      <form action="{% if data['new-course']['include-fee-or-salary'] %}/new/funding{% else %}/new/full-time-part-time{% endif %}" method="post">
 
         {% set fields = [
             {
