Tweak primary subjects list

--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -17,12 +17,11 @@
         {% set primaryFields = [
            { name: 'Primary'},
            { name: 'Primary with English'},
-           { name: 'Primary with history'},
-           { name: 'Primary with geography'},
-           { name: 'Primary with mathematics'},
-           { name: 'Primary with modern languages'},
-           { name: 'Primary with physical education'},
-           { name: 'Primary with science'}
+           { name: 'Primary with History and Geography'},
+           { name: 'Primary with Mathematics'},
+           { name: 'Primary with Modern Languages'},
+           { name: 'Primary with Physical Education'},
+           { name: 'Primary with Science'}
           ]
         %}
 
