--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -6,7 +6,7 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" class="link-back">Back</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back</a>
 
   {% include "course/_errors.html" %}
 
@@ -17,7 +17,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
+      <form action="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" method="post">
         <h2 class="heading-large remove-top-margin">Course length</h2>
         {% set otherField %}
           {{ macros.textbox(course.programmeCode + '-duration-other', 'Course length')}}
@@ -83,7 +83,7 @@
           <input type="submit" class="button" value="Save" />
         </div>
 
-        <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">Cancel changes</a>
+        <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
       </form>
     </div>
     <div class="column-one-third">
