--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -13,7 +13,7 @@
       This is a preview of a template: {{ template.name }}
     </div>
   {% else %}
-    <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" class="link-back">Back to course</a>
+    <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back to course</a>
 
     <div class="status-box add-top-margin">
       This is a preview of a course: {{ course.name }} ({{ course.programmeCode }}).
