--- a/app/views/template/apply.html
+++ b/app/views/template/apply.html
@@ -26,7 +26,7 @@
       <table class="ucas-info-table">
         <thead>
           <tr>
-            <th style="width: 30px"><input type="checkbox" value="{{ accrediting.slug }}-all" /></th>
+            <th style="width: 30px"><input type="checkbox" value="{{ data['provider-code'] }}-all" /></th>
             <th class="code-col" style="width: 40px">Code</th>
             <th class="subject-col" style="width: 30%">Subject</th>
             <th class="type-col">Type</th>
