--- a/app/views/course/_errors.html
+++ b/app/views/course/_errors.html
@@ -8,7 +8,7 @@
   </p>
   <ul class="error-summary-list">
     {% for error in errors %}
-    <li><a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}{{ error.link }}">{{ error.title }}</a></li>
+    <li><a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}{{ error.link }}">{{ error.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
