--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -6,7 +6,7 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/course/{{ accrediting.slug }}/{{ subject.slug }}" class="link-back">Back</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ subject.slug }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     <span class="heading-secondary">{{ subject.name }}</span>
