--- a/app/views/course/pick-template.html
+++ b/app/views/course/pick-template.html
@@ -6,7 +6,7 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" class="link-back">Back</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
     <!-- <span class="heading-secondary">{{ subject.name }}</span> -->
@@ -16,7 +16,7 @@
   {% include "course/_pick-template-choices.html" %}
 
   <div class="form-group add-top-margin">
-    <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">Cancel changes</a>
+    <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
   </div>
 </main>
 
