--- a/app/views/course/school-placements.html
+++ b/app/views/course/school-placements.html
@@ -18,7 +18,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form action="/course/{{ accrediting.slug }}/{{ subject.slug }}" method="post">
+      <form action="/course/{{ data['provider-code'] }}/{{ subject.slug }}" method="post">
         {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-placements', 'School placements', 10) }}
 
         <div class="add-double-bottom-margin">
