Add course information section
* Replace UCAS bit
* Hide outcome from about this course
* No edit yet

--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -36,7 +36,7 @@
 
         <hr />
 
-        <h3 class="heading-large remove-top-margin">Outcome</h3>
+        <!-- <h3 class="heading-large remove-top-margin">Outcome</h3>
         <p>Pick the outcome which describes what a trainee will get when they complete this course.</p>
 
         {% set fields = [
@@ -79,10 +79,7 @@
             {{ macros.radioGroup(course.programmeCode + '-outcome', fields, errors, 4) }}
           </div>
         </details>
-
-
-
-        <hr />
+        <hr /> -->
 
         <h3 class="heading-large remove-top-margin">Interview process</h3>
 
