--- a/app/views/course.html
+++ b/app/views/course.html
@@ -83,9 +83,32 @@
       <div class="course-parts course-parts--large">
         <ul class="course-parts-items">
           <li class="course-parts-item">
-            <h3 class="course-part-task">Information from UCAS</h3>
+            <h3 class="course-part-task">Course information</h3>
+            <!-- <a class="course-part-task-action" href="#">Edit</a> -->
             <div style="overflow: hidden; clear: left; margin-bottom: 30px;"></div>
-            <p>You can only change this information using <a href="https://update.ucas.co.uk/netupdate2/Welcome.htm">UCAS web-link</a>. Changes will usually appear here within one working day.</p>
+            <p class="lede">{{ course.options }}</p>
+            <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
+              <dt>Level:</dt>
+              <dd>Secondary</dd>
+              <dt>Special educational needs:</dt>
+              <dd>No</dd>
+              <dt>Subject:</dt>
+              <dd>Art and design</dd>
+              <dt>Outcome:</dt>
+              <dd>{{ data[course.programmeCode + '-outcome'] }}</dd>
+              <dt>Full time or part time:</dt>
+              <dd>Full time</dd>
+              <dt>Fee or salary:</dt>
+              <dd>Fee paying</dd>
+              <dt>Accredited provider:</dt>
+              <dd>{{ course.accrediting }}</dd>
+            </dl>
+          </li>
+          <!-- <li class="course-parts-item">
+            <h3 class="course-part-task">Course information</h3>
+
+            <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">Edit</a>
+
             <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
               <dt>Status:</dt>
               <dd>Running</dd>
@@ -99,21 +122,20 @@
               <dd>{{ course.route }}</dd>
               <dt>Subjects:</dt>
               <dd>{{ course.subjects }}</dd>
-              <!-- <dt>Age range:</dt>
-              <dd>{{ course.ageRange }}</dd> -->
+              <dt>Age range:</dt>
+              <dd>{{ course.ageRange }}</dd>
               <dt>Qualification:</dt>
               <dd>{{ course.qualifications }}</dd>
               <dt>Regions:</dt>
               <dd>{{ course.regions }}</dd>
             </dl>
-          </li>
+          </li> -->
           <li class="course-parts-item">
             <h3 class="course-part-task">About this course</h3>
 
             <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">Edit</a>
             <dl class="course-part-tasks">
               {{ macros.coursePart(course.programmeCode + '-about-this-course', 'About this course', errors, coursePath) }}
-              {{ macros.coursePart(course.programmeCode + '-outcome', 'Outcome', errors, coursePath) }}
               {{ macros.coursePart(course.programmeCode + '-interview-process', 'Interview process (optional)') }}
               {{ macros.coursePart(course.programmeCode + '-placement-school-policy', 'How school placements work', errors, coursePath) }}
             </dl>
